# hx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  flake.nix  install.sh  mise.toml
.claude/: CLAUDE.md  NEXT.md  ROADMAP.md
.claude/rules/: cli.md  cross-platform.md  errors.md  rust.md  testing.md
.github/workflows/: ci.yml  docker.yml  flakehub.yml  release.yml
contrib/asdf-hx/: README.md
contrib/asdf-hx/lib/: utils.bash
contrib/nix/: package.nix
crates/hx-bhc/: Cargo.toml
crates/hx-bhc/src/: build.rs  builtin_packages.rs  compile.rs  diagnostics.rs  full_native.rs  lib.rs  manifest.rs  native.rs  native_builder.rs  package_build.rs  package_db.rs  repl.rs
crates/hx-cabal/: Cargo.toml
crates/hx-cabal/docs/: README.md  building.md  diagnostics.md  native.md  packages.md
crates/hx-cabal/src/: backend.rs  build.rs  edit.rs  fetch.rs  freeze.rs  full_native.rs  ghc_diagnostics.rs  lib.rs  native.rs  package_build.rs  package_db.rs  preprocessor.rs  server.rs  setup.rs
crates/hx-cache/: Cargo.toml
crates/hx-cache/docs/: README.md  artifacts.md  build-state.md  directories.md  fingerprinting.md
crates/hx-cache/src/: artifacts.rs  bhc_store.rs  build_state.rs  lib.rs  source.rs  store.rs
crates/hx-cli/: Cargo.toml
crates/hx-cli/benches/: cli_bench.rs
crates/hx-cli/docs/: README.md
crates/hx-cli/docs/commands/: build.md  toolchain.md
crates/hx-cli/src/: cli.rs  main.rs  plugins.rs  styles.rs
crates/hx-cli/src/commands/: audit.rs  bench.rs  bhc_platform.rs  build.rs  cache.rs  changelog.rs  clean.rs  completions.rs  config.rs  coverage.rs  deps.rs  dist.rs  docs.rs  doctor.rs  fetch.rs  fmt.rs  ide.rs  import.rs  index.rs  init.rs  lint.rs  lock.rs  lsp.rs  mod.rs  new.rs  nix.rs  plugins.rs  profile.rs  publish.rs  run.rs  script.rs  search.rs  server.rs  stackage.rs  toolchain.rs  upgrade.rs  watch.rs
crates/hx-cli/src/templates/: cli.rs  library.rs  mod.rs  numeric.rs  server.rs  webapp.rs
crates/hx-cli/tests/: cli.rs  e2e_workflows.rs
crates/hx-compiler/: Cargo.toml
crates/hx-compiler/src/: lib.rs  registry.rs
crates/hx-config/: Cargo.toml
crates/hx-config/docs/: README.md  ide.md  manifest.md  project.md  workspaces.md
crates/hx-config/src/: combine.rs  global.rs  ide.rs  lib.rs  manifest.rs  project.rs
crates/hx-core/: Cargo.toml
crates/hx-core/docs/: README.md  commands.md  errors.md  exit-codes.md
crates/hx-core/src/: command.rs  diagnostic.rs  env.rs  error.rs  lib.rs  version.rs
crates/hx-doctor/: Cargo.toml
crates/hx-doctor/docs/: README.md  checks.md
crates/hx-doctor/src/: lib.rs
crates/hx-lock/: Cargo.toml
crates/hx-lock/docs/: README.md  fingerprint.md  format.md  freeze.md
crates/hx-lock/src/: lib.rs
crates/hx-lsp/: Cargo.toml
crates/hx-lsp/docs/: README.md  editor-setup.md  protocol.md
crates/hx-lsp/src/: lib.rs  server.rs  state.rs  watcher.rs
crates/hx-plugins/: Cargo.toml
crates/hx-plugins/docs/: README.md  custom-commands.md  steel-api.md
crates/hx-plugins/src/: commands.rs  config.rs  context.rs  engine.rs  error.rs  hooks.rs  lib.rs  loader.rs  prelude.scm
crates/hx-plugins/src/api/: build.rs  config.rs  fs.rs  mod.rs  output.rs  project.rs  shell.rs
crates/hx-solver/: Cargo.toml
crates/hx-solver/benches/: solver_bench.rs
crates/hx-solver/data/: bhc-platform-2026.1.toml  bhc-platform-2026.2.toml
crates/hx-solver/docs/: README.md  constraints.md  resolution.md
crates/hx-solver/src/: bhc_platform.rs  cabal.rs  cache.rs  extract.rs  fetch.rs  index.rs  lib.rs  mirror.rs  modules.rs  package.rs  plan.rs  resolver.rs  snapshot.rs  version.rs
crates/hx-solver/tests/: integration.rs
crates/hx-telemetry/: Cargo.toml
crates/hx-telemetry/docs/: README.md  spans.md
crates/hx-telemetry/src/: lib.rs
crates/hx-toolchain/: Cargo.toml
crates/hx-toolchain/docs/: README.md  auto-install.md  detection.md  installation.md  platforms.md  versions.md
crates/hx-toolchain/src/: check.rs  detect.rs  install.rs  lib.rs
crates/hx-toolchain/src/bhc/: mod.rs
crates/hx-toolchain/src/cabal/: download.rs  mod.rs  platform.rs  versions.rs
crates/hx-toolchain/src/ghc/: activate.rs  download.rs  manifest.rs  mod.rs  platform.rs  versions.rs
crates/hx-ui/: Cargo.toml
crates/hx-ui/docs/: README.md  progress.md  styling.md
crates/hx-ui/src/: lib.rs  output.rs  printer.rs  spinner.rs  style.rs
crates/hx-warnings/: Cargo.toml
crates/hx-warnings/docs/: README.md  error-chain.md
crates/hx-warnings/src/: lib.rs
docs/: BENCHMARKS.md  BHC_PLATFORM.md  CROSS_COMPILATION.md  DISTRIBUTION.md  GETTING_STARTED.md  STACKAGE.md
scripts/: benchmark-comparison.sh
