[workspace]
resolver = "2"
members = [
    "crates/hx-cli",
    "crates/hx-core",
    "crates/hx-config",
    "crates/hx-lock",
    "crates/hx-toolchain",
    "crates/hx-cabal",
    "crates/hx-cache",
    "crates/hx-doctor",
    "crates/hx-ui",
    "crates/hx-telemetry",
    "crates/hx-warnings",
    "crates/hx-solver",
    "crates/hx-lsp",
    "crates/hx-plugins",
    "crates/hx-compiler",
    "crates/hx-bhc",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/raskell-io/hx"
authors = ["Raffael Schneider <raffaelschneider@users.noreply.github.com>"]
keywords = ["haskell", "toolchain", "build", "cabal", "ghc"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UI
indicatif = "0.17"
console = "0.15"
owo-colors = "4"
anstream = "0.6"

# Hashing
sha2 = "0.10"

# Paths
directories = "5"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
which = "7"
bincode = "1.3"
once_cell = "1"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }

# Archive creation
tar = "0.4"
flate2 = "1"
zip = "2"
hex = "0.4"

# Workspace crates
hx-core = { version = "0.5.0", path = "crates/hx-core" }
hx-config = { version = "0.5.0", path = "crates/hx-config" }
hx-lock = { version = "0.5.0", path = "crates/hx-lock" }
hx-toolchain = { version = "0.5.0", path = "crates/hx-toolchain" }
hx-cabal = { version = "0.5.0", path = "crates/hx-cabal" }
hx-cache = { version = "0.5.0", path = "crates/hx-cache" }
hx-doctor = { version = "0.5.0", path = "crates/hx-doctor" }
hx-ui = { version = "0.5.0", path = "crates/hx-ui" }
hx-telemetry = { version = "0.5.0", path = "crates/hx-telemetry" }
hx-warnings = { version = "0.5.0", path = "crates/hx-warnings" }
hx-solver = { version = "0.5.0", path = "crates/hx-solver" }
hx-lsp = { version = "0.5.0", path = "crates/hx-lsp" }
hx-plugins = { version = "0.5.0", path = "crates/hx-plugins" }
hx-compiler = { version = "0.5.0", path = "crates/hx-compiler" }
hx-bhc = { version = "0.5.0", path = "crates/hx-bhc" }

# Async trait
async-trait = "0.1"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["filters"] }

# Benchmarking
criterion = "0.5"
