[package]
name = "hx-bhc"
description = "BHC (Basel Haskell Compiler) backend for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hx-compiler.workspace = true
hx-ui.workspace = true
hx-config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
