[package]
name = "hx-cabal"
description = "Cabal wrapper and output parsing for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hx-core.workspace = true
hx-ui.workspace = true
hx-cache.workspace = true
hx-solver.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tokio.workspace = true
num_cpus = "1.16"
dirs = "5.0"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
