[package]
name = "hx-cli"
description = "Command-line interface for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hx"
path = "src/main.rs"

[dependencies]
hx-core.workspace = true
hx-config.workspace = true
hx-lock.workspace = true
hx-toolchain.workspace = true
hx-cabal.workspace = true
hx-cache.workspace = true
hx-doctor.workspace = true
hx-ui.workspace = true
hx-telemetry.workspace = true
hx-warnings.workspace = true
hx-solver.workspace = true
hx-lsp.workspace = true
hx-plugins.workspace = true

clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
self_update.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
console.workspace = true
which.workspace = true
chrono.workspace = true
num_cpus = "1.16"
walkdir = "2.5"
glob = "0.3"
sha2.workspace = true
dirs = "5.0"
notify-debouncer-mini = "0.5"
tar.workspace = true
flate2.workspace = true
zip.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
insta.workspace = true
