[package]
name = "hx-compiler"
description = "Compiler backend abstraction for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"

hx-ui = { path = "../hx-ui" }
