[package]
name = "hx-core"
description = "Core types and orchestration for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
regex-lite = "0.1"
