[package]
name = "hx-doctor"
description = "Diagnostic checks and fix suggestions for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hx-core.workspace = true
hx-config.workspace = true
hx-toolchain.workspace = true
hx-solver.workspace = true
hx-ui.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
