[package]
name = "hx-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dependency resolver for Haskell packages"

[dependencies]
hx-core = { path = "../hx-core" }

# Parsing
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Paths
dirs-next = "2.0"

# Utilities
thiserror = "2"
tracing = "0.1"

# Caching
bincode = "1.3"
sha2 = "0.10"

# Async/HTTP
tokio = { version = "1", features = ["fs", "sync"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"

# Progress
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
