[package]
name = "hx-toolchain"
description = "Toolchain detection and management for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hx-core.workspace = true
hx-ui.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
which.workspace = true
