[package]
name = "hx-toolchain"
description = "Toolchain detection and management for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hx-core.workspace = true
hx-ui.workspace = true
hx-cache.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
which.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["stream"] }
atty = "0.2"
xz2 = "0.1"
tar = "0.4"
futures-util = "0.3"
tempfile.workspace = true
